--- a/authenticated.html
+++ b/authenticated.html
@@ -36,10 +36,10 @@
             // Get the 'code' parameter from the URL
             const code = getUrlParameter('code');
             // Base deep link for the Android game
-            const baseDeepLink = "mygame://start";
+            const baseDeepLink = "xyz.kiooverse.games.kioomonorigins.dev://";
             // Append code parameter to deep link if it exists
             const deepLink = code ? `${baseDeepLink}?code=${encodeURIComponent(code)}` : baseDeepLink;
-            const fallbackUrl = "https://play.google.com/store/apps/details?id=com.example.mygame";
+            const fallbackUrl = "https://play.google.com/store/apps/details?id=xyz.kiooverse.games.kioomonorigins.dev://";
 
             // Attempt to open the deep link
             window.location.href = deepLink;
